--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -18,28 +18,28 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<input type="hidden" th:field="*{matchId}" class="form-control" />
 					<div class="form-group">
-						<label>Spiel:</label><br/>
+						<label>Länderauswahl:</label><br/>
 						<div class="row">
 							<div class="col-xs-6">
-								<select th:field="*{teamOne.country}" class="form-control">
+								<select th:field="*{countryTeamOne}" class="form-control">
 								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
 								</select>
 							</div>
 							<div class="col-xs-6">
-								<select th:field="*{teamTwo.country}" class="form-control">
+								<select th:field="*{countryTeamTwo}" class="form-control">
 								  <option th:each="country : ${availableCountries}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
 								</select>
 							</div>
 						</div>
 					</div>
 					<div class="form-group">
-						<label>oder</label><br/>
+						<label>oder Teamnamen:</label><br/>
 						<div class="row">							
 							<div class="col-xs-6">
-								<input type="text" th:field="*{teamNameOne}" class="form-control" />
+								<input type="text" th:field="*{nameTeamOne}" class="form-control" />
 							</div>
 							<div class="col-xs-6">
-								<input type="text" th:field="*{teamNameTwo}" class="form-control" />
+								<input type="text" th:field="*{nameTeamTwo}" class="form-control" />
 							</div>
 						</div>
 					</div>			
