bugfix flag orientation

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -81,6 +81,10 @@ h1 {
 	text-align: center;
 }
 
+img.flag {
+	vertical-align: baseline;
+}
+
 /* For earlier break collapse in navbar */
 @media ( max-width : 1200px) {
 	.navbar-header {
