--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -19,7 +19,7 @@
 				  			</div>
 				  			<div class="col-xs-5">
 				  				<div class="row custom-button-group">
-				  					<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
+				  					<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
 								</div>
 				  			</div>				  				
       					</div>
