update background color

--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -27,7 +27,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr class="success">
+								<tr class="info">
 									<td><input type="text" th:field="*{teamResultOne}" class="form-control form-size-small" /></td>
 									<td><input type="text" th:field="*{teamResultTwo}" class="form-control form-size-small" /></td>
 								</tr>
