redirect to view where we started

--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -15,6 +15,7 @@
 					<input type="hidden" th:field="*{matchId}" class="form-control" />
 					<input type="hidden" th:field="*{teamNameOne}" class="form-control" />
 					<input type="hidden" th:field="*{teamNameTwo}" class="form-control" />
+					<input type="hidden" th:field="*{redirectViewName}" class="form-control" />
 					<div class="form-group">
 						<table class="table center">
 							<thead>
