--- a/src/main/resources/templates/bet/list_open.html
+++ b/src/main/resources/templates/bet/list_open.html
@@ -25,7 +25,7 @@
 				  			</div>		
 				  			<div class="col-xs-3">
 					  			<div class="btn-group">
-									<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${matchCommand.hasMatchStarted()}? 'disabled'" class="btn btn-success" role="button"><span class="glyphicon glyphicon-hand-up"></span></a>
+									<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}} + '?redirectViewName=OPEN_BETS'" th:classappend="${matchCommand.hasMatchStarted()}? 'disabled'" class="btn btn-success" role="button"><span class="glyphicon glyphicon-hand-up"></span></a>
 	       						</div>
        						</div>
       					</div>
