--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -32,23 +32,23 @@
 						</div>
 						<div class="panel-body">
 							<div class="row">
-								<div class="col-xs-3">
+								<div class="col-xs-2">
 									<div class="short-div">
-										<span>Ergebnis:</span>
+										<img th:src="@{/images/final_flag.png}" title="Ergebnis"/>
 									</div>
-									<div class="short-div betting-results">										
-										<span>getippt:</span>
+									<div class="short-div">										
+										<img th:src="@{/images/gaming_cube.png}" title="getippt"/>
 									</div>							  									  		
 					  			</div>					
 					  			<div class="col-xs-4 full-box">				
-					  				<div class="short-div">
+					  				<div class="short-div goal_padding">
 					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultOne != null} ? label-info : label-default" 
 					  					      th:text="${matchCommand.teamResultOne != null ? matchCommand.teamResultOne : '?'}"></span>
 								  		<span> : </span>
 							  			<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultTwo != null} ? label-info : label-default" 
 							  			      th:text="${matchCommand.teamResultTwo != null ? matchCommand.teamResultTwo : '?'}"></span>
 					  				</div>	  				
-					  				<div class="short-div betting-results">
+					  				<div class="short-div goal_padding">
 					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.userBetGoalsTeamOne != null} ? label-success : label-default" 
 					  					      th:text="${matchCommand.userBetGoalsTeamOne != null ? matchCommand.userBetGoalsTeamOne : '?'}"></span>
 								  		<span> : </span>
@@ -56,7 +56,7 @@
 							  			      th:text="${matchCommand.userBetGoalsTeamTwo != null ? matchCommand.userBetGoalsTeamTwo : '?'}"></span>
 					  				</div>
 					  			</div>  			
-					  			<div class="col-xs-5">
+					  			<div class="col-xs-6">
 					  				<div class="row custom-button-group">
 								        <a sec:authorize="hasAuthority('PERM_EDIT_MATCH')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" class="btn btn-primary" role="button" title="Spiel ändern">
 				            					<span class="glyphicon glyphicon-pencil"></span>
