--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -40,7 +40,7 @@
 										<img th:src="@{/images/gaming_cube.png}" title="getippt"/>
 									</div>							  									  		
 					  			</div>					
-					  			<div class="col-xs-4 full-box">				
+					  			<div class="col-xs-4">				
 					  				<div class="short-div goal_padding_bigger">
 					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultOne != null} ? label-info : label-default" 
 					  					      th:text="${matchCommand.teamResultOne != null ? matchCommand.teamResultOne : '?'}"></span>
