--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -40,6 +40,15 @@ h1 {
 	padding-bottom: 13px;
 }
 
+.no-left-right-padding {
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
+.center {
+	text-align: center;
+}
+
 .ranking-name {
 	font-size: 16px;
 	vertical-align: sub;
@@ -61,7 +70,7 @@ h1 {
 
 .custom-button-group {
 	float: right;
-	padding-right: 20px;
+	padding-right: 15px;
 }
 
 .teamName {
