--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -40,7 +40,7 @@
 										<img th:src="@{/images/gaming_cube.png}" title="getippt"/>
 									</div>							  									  		
 					  			</div>					
-					  			<div class="col-xs-4">				
+					  			<div class="col-xs-4 no-left-right-padding center">				
 					  				<div class="short-div goal_padding_bigger">
 					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultOne != null} ? label-info : label-default" 
 					  					      th:text="${matchCommand.teamResultOne != null ? matchCommand.teamResultOne : '?'}"></span>
@@ -57,18 +57,20 @@
 					  				</div>
 					  			</div>  			
 					  			<div class="col-xs-6">
-					  				<div class="row custom-button-group">
-								        <a sec:authorize="hasAuthority('PERM_EDIT_MATCH')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" class="btn btn-primary" role="button" title="Spiel ändern">
-				            					<span class="glyphicon glyphicon-pencil"></span>
+					  				<div class="row center">
+								        <a sec:authorize="hasAuthority('PERM_EDIT_MATCH')" href="#" th:href="@{'/matches/' + ${matchCommand.matchId}}" 
+								              class="btn btn-primary" role="button" title="Spiel ändern">
+				            				  <span class="glyphicon glyphicon-pencil"></span>
 				            			</a>
-				            			<a sec:authorize="hasAuthority('PERM_EDIT_MATCH_RESULT')" href="#" th:href="@{'/matches/matchresult/' + ${matchCommand.matchId}}" class="btn btn-info" role="button" title="Ergebnis eingeben">
+				            			<a sec:authorize="hasAuthority('PERM_EDIT_MATCH_RESULT')" href="#" th:href="@{'/matches/matchresult/' + ${matchCommand.matchId}}" 
+				            			        class="btn btn-info" role="button" title="Ergebnis eingeben">
 				            					<span class="glyphicon glyphicon-ok"></span>
 				            			</a>
 				            			<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
 												   class="btn btn-success" role="button" title="Spiel tippen">
 											<span class="glyphicon glyphicon-hand-up"></span>
 										</a>
-							        </div>						  			
+							        </div>
 	       						</div>	       						
        						</div>
 					   </div>					   
