--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 .big-badge {
-	font-size: 16px;
+	font-size: 15px;
 }
 
 .bold {
@@ -24,6 +24,10 @@ h1 {
 	display: inline-block;
 	vertical-align: middle;
 	float: none;
+}
+
+.button-bar {
+	padding-top: 14px;
 }
 
 .list-group-item {
@@ -45,8 +49,16 @@ h1 {
 	padding-right: 0px;
 }
 
+.no-right-padding {
+	padding-right: 0px;
+}
+
 .center {
 	text-align: center;
+}
+
+.right {
+	float: right;
 }
 
 .ranking-name {
