small layout optimizations

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -49,6 +49,11 @@ h1 {
 	padding-right: 0px;
 }
 
+.goal-badges {
+	padding-left: 8px;
+	padding-right: 0px;
+}
+
 .no-right-padding {
 	padding-right: 0px;
 }
