--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -30,7 +30,7 @@
 						</div>
 						<div class="panel-body">
 							<div class="row">
-								<div class="col-xs-2">
+								<div class="col-xs-2 center">
 									<div class="short-div goal_padding">
 										<img th:src="@{/images/final_flag.png}" title="Ergebnis"/>
 									</div>
@@ -38,7 +38,7 @@
 										<img th:src="@{/images/gaming_cube.png}" title="getippt"/>
 									</div>							  									  		
 					  			</div>					
-					  			<div class="col-xs-4 no-left-right-padding center">				
+					  			<div class="col-xs-4 goal-badges">				
 					  				<div class="short-div goal_padding_bigger">
 					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultOne != null} ? label-info : label-default" 
 					  					      th:text="${matchCommand.teamResultOne != null ? matchCommand.teamResultOne : '?'}"></span>
