--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,10 +14,10 @@
 			<div class="row">
 				<div class="col-sm-6 col-lg-3">
 					<div class="form-group">
-						<input type="text" name="username" th:placeholder="#{login.placeholder.username}" class="form-control" />
+						<input id="username" type="text" name="username" th:placeholder="#{login.placeholder.username}" class="form-control" />
 					</div>
 					<div class="form-group">
-						<input type="password" name="password" th:placeholder="#{login.placeholder.password}" class="form-control" />
+						<input id="password" type="password" name="password" th:placeholder="#{login.placeholder.password}" class="form-control" />
 					</div>
 					<div class="form-group">
         				<input type="checkbox" name="remember-me" id="remember-me"/>
