--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
         				<input type="checkbox" name="remember-me" id="remember-me"/>
 						<label for="remember-me">Auto-Login</label>
 					</div>					
-					<button type="submit" class="btn btn-primary" th:text="#{login.button.login}"></button>
+					<button id="loginSubmitBtn" type="submit" class="btn btn-primary" th:text="#{login.button.login}"></button>
 				</div>
 			</div>
 		</form>
