--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -54,21 +54,20 @@
 			        </li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li th:if="${@securityBean.isUserLoggedIn()} == false">
-						<a href="#login" th:href="@{/login}" th:text="#{login.button.login}"><span class="glyphicon glyphicon-log-in"></span></a>
-					</li>
 					<li th:if="${@securityBean.isUserLoggedIn()} == true" class="dropdown" th:classappend="${pageState_userprofile}">
 						<a href="#" th:inline="text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <span class="glyphicon glyphicon-user"></span> <span sec:authentication="name"></span><span class="caret"></span>
                         </a>
 						<ul class="dropdown-menu">
 							<li th:class="${pageState_userprofile_changePassword}"><a href="#changePassword" th:href="@{/userprofile/changePassword}" th:text="#{navigation.changePassword}"></a></li>
-							<li>
-                                <a th:href="@{/logout}" th:text="#{navigation.logout}"></a>								
-							</li>
 						</ul>						
 					</li>
-					<li th:if="${@securityBean.isUserLoggedIn()} == true"><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span></a></li>					
+					<li th:if="${@securityBean.isUserLoggedIn()} == true">
+						<a th:href="@{/logout}">
+							<span class="glyphicon glyphicon-log-out"></span>
+							<span th:text="#{navigation.logout}" th:remove="tag"></span>
+						</a>
+					</li>					
 				</ul>
 			</div>
 		</div>
