--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -54,7 +54,7 @@
 			        </li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li th:if="${@securityBean.isUserLoggedIn()} == true" class="dropdown" th:classappend="${pageState_userprofile}">
+					<li th:if="${@securityBean.isUserLoggedIn()}" class="dropdown" th:classappend="${pageState_userprofile}">
 						<a href="#" th:inline="text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <span class="glyphicon glyphicon-user"></span> <span sec:authentication="name"></span><span class="caret"></span>
                         </a>
@@ -62,7 +62,7 @@
 							<li th:class="${pageState_userprofile_changePassword}"><a href="#changePassword" th:href="@{/userprofile/changePassword}" th:text="#{navigation.changePassword}"></a></li>
 						</ul>						
 					</li>
-					<li th:if="${@securityBean.isUserLoggedIn()} == true">
+					<li th:if="${@securityBean.isUserLoggedIn()}">
 						<a th:href="@{/logout}">
 							<span class="glyphicon glyphicon-log-out"></span>
 							<span th:text="#{navigation.logout}" th:remove="tag"></span>
